<resources>
    <string name="app_name">DigiTrac</string>
    <string name="register">Register</string>
    <string name="continue_with_your_mobile_number">Continue with your mobile number</string>
    <string name="phone_number_email_id">Phone Number / Email Id</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_4_digit_otp_sent_to">Enter 4 digit OTP sent to</string>
    <string name="enter_6_digit_otp_sent_to">Enter 6 digit OTP sent to</string>
    <string name="otp">OTP</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP?</string>
    <string name="re_send">Re-send</string>
    <string name="verify">Verify</string>
    <string name="navigation_drawer_open" translatable="false">Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Drawer Close</string>
    <string name="onboarding">Onboarding</string>
    <string name="leaves">Leaves</string>
    <string name="reimbursements">Reimbursements</string>
    <string name="reimbursement_details">Reimbursement Details</string>
    <string name="payslip">Payslip</string>
    <string name="payslip_" translatable="false">PaySlip</string>
    <string name="download_payslip">Download Payslip</string>
    <string name="pf_esic_insurance">PF/ESIC/Insurance</string>
    <string name="my_letters">My Letters</string>
    <string name="resignation">Resignation</string>
    <string name="help_and_support">Help and Support</string>
    <string name="we_need_a_few_more_details_to_complete_your_profile">We need a few more details to complete your profile</string>
    <string name="candidate_details">Candidate details</string>
    <string name="kyc">KYC</string>
    <string name="family_details">Family details</string>
    <string name="educational_details">Educational details</string>
    <string name="work_experience">Work experience</string>
    <string name="epf_details">EPF details</string>
    <string name="esic_details">ESIC details</string>
    <string name="document_details">Document details</string>
    <string name="bank_details">Bank details</string>
    <string name="reference_details">Reference details</string>
    <string name="signature">Signature</string>
    <string name="field_term_acknowledgment"><font color='#FF0000'>*</font>I hereby confirm that the details and documents uploaded by me are True and Correct
to the best of my knowledge and belief and I shall be held liable for the same.</string>
    <string name="signature_pdf">Signature.pdf</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="working_hours">Working Hours</string>
    <string name="attendance">Attendance</string>
    <string name="successfully_checked_in">Successfully Checked-In</string>
    <string name="successfully_checked_out">Successfully Checked-Out</string>
    <string name="your_attendance_is_recorded_successfully">Your attendance is recorded successfully.</string>
    <string name="okay">Okay</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="time_sheet">Time Sheet</string>
    <string name="log_your_visit">Log your visit</string>
    <string name="attendance_regularization">Attendance Regularization</string>
    <string name="mileage_tracking">Mileage Tracking</string>
    <string name="date">Date</string>
    <string name="working_hr_s">Working Hr\'s</string>
    <string name="your_visits">Your Visits</string>
    <string name="request">Request</string>
    <string name="upload_image">Upload Image</string>
    <string name="opening_reading">Opening Reading</string>
    <string name="closing_reading">Closing Reading</string>
    <string name="add_image">Add Image</string>
    <string name="done">Done</string>
    <string name="reason">Reason</string>
    <string name="acknowledged">Acknowledged</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="view_acknowledged">View Acknowledged</string>
    <string name="pending">Pending</string>
    <string name="policy">Policy</string>
    <string name="client_policy">Client policy</string>
    <string name="training">Training</string>
    <string name="innov_id_card">Innov Id card</string>
    <string name="customer_id_card">Customer id card</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="blood_group">Blood Group</string>
    <string name="date_of_joining">Date of Joining</string>
    <string name="work_location">Work Location</string>
    <string name="client_name">Client Name</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="jobs">Jobs</string>
    <string name="resolved">Resolved</string>
    <string name="in__progress">In Progress</string>
    <string name="new_leave_request">New Leave Request</string>
    <string name="issue_category">Issue Category</string>
    <string name="request_title">Request Title</string>
    <string name="submit">Submit</string>
    <string name="issue_sub_category">Issue Sub Category</string>
    <string name="resignation_category">Resignation Category</string>
    <string name="last_working_date">Last Working Date</string>
    <string name="candidate_loi">Candidate LOI</string>
    <string name="offer_letter">Offer letter</string>
    <string name="pf_uan">PF/UAN</string>
    <string name="esic_card">ESIC card</string>
    <string name="medical_card">Medical card</string>
    <string name="accepted">Accepted</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="awaiting">Awaiting</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="holiday_list">Holiday List</string>
    <string name="sr_no">Sr No.</string>
    <string name="holiday_name">Holiday Name</string>
    <string name="view_holiday_list">View Holiday List</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="choose_leave_type">Choose leave type</string>
    <string name="choose_leave_sub_type">Choose leave sub type</string>
    <string name="choose_from_date">Choose From Date</string>
    <string name="choose_to_date">Choose To Date</string>
    <string name="apply">Apply</string>
    <string name="apply_job">Apply Job</string>
    <string name="full_time">Full Time</string>
    <string name="remote">Remote</string>
    <string name="profile_details">Profile Details</string>
    <string name="cover_letter">Cover Letter</string>
    <string name="documents">Documents</string>
    <string name="submit_documents">Submit Documents</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="add_document">Add Document</string>
    <string name="min_experience">MIN. EXPERIENCE</string>
    <string name="Location">LOCATION</string>
    <string name="candidate">Candidate</string>
    <string name="skill">Skill</string>
    <string name="candidate_location">Candidate Location</string>
    <string name="branch_name">Branch Name</string>
    <string name="candidate_phone">Candidate Phone</string>
    <string name="candidate_email">Candidate Email Id</string>
    <string name="aadhaar_card_number">Aadhaar Card Number</string>
    <string name="aadhaar_no">Aadhar No</string>
    <string name="view_details">View details</string>
    <string name="edit">Edit</string>
    <string name="add_a_person">Add a person</string>
    <string name="aadhaar_card">Aadhar card</string>
    <string name="view">View</string>
    <string name="please_enter_10digit_mobile_no">Please enter 10 digit mobile no</string>
    <string name="please_enter_valid_phone">Please enter valid phone number</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="My_Profile">MY PROFILE</string>
    <string name="my_profile">My Profile</string>
    <string name="complete_your_profile">Complete Your Profile!</string>
    <string name="mark_your_attendance">Mark Your Attendance!</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="hi">Hi,</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="please_enter_4_digit_otp">Please enter 4 Digit OTP</string>
    <string name="please_enter_6_digit_otp">Please enter 6 Digit OTP</string>
    <string name="please_enter_valid_otp">Please enter valid OTP</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="not_a_register_number">Not a Registered number</string>
    <string name="esic_medical_card">ESIC Medical card</string>
    <string name="pf_uan_no">PF UAN NO :</string>
    <string name="pf_no">PF NO :</string>
    <string name="issue_type">Issue Type - </string>
    <string name="issue_on">Issue on : </string>
    <string name="resolved_on">Resolved on : </string>
    <string name="Select">--Select--</string>
    <string name="select">--select--</string>
    <string name="success"> </string>
    <string name="associate_request">Associate Request</string>
    <string name="please_select_resignation_category">Please select resignation category</string>
    <string name="please_select_marital_status">Please select marital status</string>
    <string name="please_select_state">Please select state</string>
    <string name="please_select_per_state">Please select present/permanent state</string>
    <string name="please_select_city">Please select city</string>
    <string name="please_select_per_city">Please select present/permanent city</string>
    <string name="please_select_preferred_last_working_date">Please select preferred last working date</string>
    <string name="please_select_gender">Please select Gender</string>
    <string name="please_select_is_fresher">Please select Is fresher</string>
    <string name="please_select_skill">Please select Skill</string>
    <string name="please_select_branch_name">Please select Branch name</string>
    <string name="please_select_currently_employed">Please select currently employed</string>
    <string name="please_enter_resignation_reason">Please enter resignation reason</string>
    <string name="please_enter_house_building">Please enter house/building name</string>
    <string name="please_enter_street">Please enter street</string>
    <string name="please_enter_landmark">Please enter landmark</string>
    <string name="please_enter_pin">Please enter pin code</string>
    <string name="please_enter_per_pin">Please enter present/permanent pin code</string>
    <string name="please_enter_per_landmark">Please enter present/permanent landmark</string>
    <string name="please_enter_per_street">Please enter present/permanent street</string>
    <string name="please_enter_per_house_building">Please enter present/permanent house/building name</string>
    <string name="please_enter_candidate_name">Please enter candidate name</string>
    <string name="login_with_mobile_number">Login with mobile number</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_using_your_mobile_number">Login using your mobile number</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="timer" translatable="false">01:30</string>
    <string name="mark_attendance_view_payslip_nrequest_for_leave_and_much_more">Mark attendance, view payslip,\nrequest for leave and much more</string>
    <string name="hindi">हिंदी</string>
    <string name="english">English</string>
    <string name="more">More…</string>
    <string name="assessment_year">Assessment Year</string>
    <string name="download">Download</string>
</resources>