<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context="com.example.digitracksdk.presentation.walkthrough.WalkThroughActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_digitrac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen120"
        android:textColor="@color/walkthrough_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_digitrac" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_description"
        style="@style/plus_jakarta_display_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen20"
        android:gravity="center"
        android:text="@string/mark_attendance_view_payslip_nrequest_for_leave_and_much_more"
        android:textAlignment="center"
        android:textColor="@color/walthrough_description_color"
        android:textSize="@dimen/size16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_digitrac" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginWithMobileNumber"
        style="@style/MaterialLightButtonBaseStyle"
        android:layout_marginHorizontal="@dimen/dimen16"
        android:layout_marginTop="@dimen/dimen100"
        android:layout_marginBottom="20dp"
        android:text="@string/login_with_mobile_number"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_description" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_or"
        style="@style/plus_jakarta_display_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen20"
        android:text="@string/or"
        android:textColor="@color/jumbo"
        android:textSize="@dimen/size12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginWithMobileNumber" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        style="@style/plus_jakarta_display_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen16"
        android:layout_marginTop="@dimen/dimen20"
        android:background="@drawable/bg_text_round_corner"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/blue_ribbon"
        android:textSize="@dimen/size16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_or" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHindi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hindi"
        style="@style/plus_jakarta_display_light"
        android:layout_marginTop="25dp"
        android:textColor="@color/blue_ribbon"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEnglish"
        style="@style/plus_jakarta_display_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:textColor="@color/blue_ribbon"
        app:layout_constraintEnd_toStartOf="@id/tvHindi"
        app:layout_constraintHorizontal_bias="0.70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHindi" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMore"
        style="@style/plus_jakarta_display_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:textColor="@color/blue_ribbon"
        app:layout_constraintStart_toEndOf="@id/tvHindi"
        app:layout_constraintHorizontal_bias="0.30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHindi" />


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_walkthrough" />

</androidx.constraintlayout.widget.ConstraintLayout>