<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context="com.example.digitracksdk.presentation.my_letters.form_16.Form16Activity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutAssessmentYear"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:hint="@string/assessment_year"
        app:boxStrokeColor="@color/athens_gray"
        app:boxStrokeWidth="0.5dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/etAssessmentYear"
            style="@style/plus_jakarta_display_regular_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:padding="18dp"
            android:singleLine="true"
            android:text="@string/Select"
            android:textColor="@color/mine_shaft" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDownload"
        style="@style/MaterialButtonBaseStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/plus_jakarta_display_medium"
        android:text="@string/download"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutAssessmentYear" />

    <include
        layout="@layout/content_loading"
        android:id="@+id/layout_loading"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>